# teleaudio

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt
include/: audio_client.hpp  utils.hpp  wav.hpp
proto/: CMakeLists.txt  communication.proto
src/: CMakeLists.txt  audio_client.cpp  audio_client.hpp  audio_server.cpp  audio_server.hpp  communication.proto  main.cpp  utils.hpp  wav.cpp  wav.hpp
test/: CMakeLists.txt
test/src/: resources.hpp.in  test_main.cpp
